--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   path_provider: ^2.0.11
   flutter_launcher_icons: ^0.10.0
   intl: ^0.17.0
+  flutter_slidable: ^2.0.0
+  google_fonts: ^3.0.1
 
 dev_dependencies:
   flutter_test:
