--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   intl: ^0.17.0
   flutter_slidable: ^2.0.0
   google_fonts: ^3.0.1
+  flutter_local_notifications: ^12.0.0
+  rxdart: ^0.27.5
+  timezone: ^0.9.0
 
 dev_dependencies:
   flutter_test:
